--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <style>body {display:flex;align-items:center;justify-content:center;}</style>
   </head>
   <body>
-    <a href="https://jamie.sh"><img src="/jamie.fail.jpg" alt="jamie.fail" />
+    <a href="https://jamie.sh"><img src="/jamie.fail.jpg" alt="jamie.fail" /></a>
   </body>
 </html>
