--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>jamie.fail</title>
-    <style>body {display:flex;align-items:center;justify-content:center;}</style>
+    <style>body {display:flex;align-items:center;justify-content:center;height:100vh;}</style>
   </head>
   <body>
     <a href="https://jamie.sh"><img src="/jamie.fail.jpg" alt="jamie.fail" /></a>
